classDiagram

class LivingBeing {
 <<interface>>
}

class LivingBeingBase {
 <<abstract>>
}

LivingBeing <|.. LivingBeingBase

class AnimalBase
class PlantBase

LivingBeingBase <|-- AnimalBase
LivingBeingBase <|-- PlantBase

class Dog
class Parrot
class Trout
class OakTree

AnimalBase <|-- Dog
AnimalBase <|-- Parrot
AnimalBase <|-- Trout

PlantBase <|-- OakTree